--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,8 @@ textarea {
 
   letter-spacing: 0.06em;
   cursor: pointer;
+  border-radius: 4px;
+  border-width: inherit;
 
   background-color: var(--accent-color);
   color: #ffffff;
@@ -610,7 +612,7 @@ textarea {
   margin-right: 10px;
 }
 /* Форма */
-.form-foter {
+.form-footer {
   display: block;
   margin-left: 93px;
   padding-top: 72px;
@@ -658,11 +660,15 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
+
   text-align: center;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
+
   cursor: pointer;
+  border-radius: 4px;
+  border-width: inherit;
 
   color: #ffffff;
 
@@ -687,8 +693,8 @@ textarea {
   transform: translate(-50%, -50%);
 
   width: 528px;
-  height: 581px;
   border-radius: 3px;
+  padding: 40px;
 
   background-color: #ffffff;
 
@@ -712,6 +718,7 @@ textarea {
     background-color: rgb(170, 241, 238);
   }
 } */
+
 .modal-btn {
   position: absolute;
   top: 8px;
@@ -737,52 +744,97 @@ textarea {
 .icon-close:focus {
   fill: var(--accent-color);
 }
-
-/* Форма в модальном окне */
 .form-title-modal {
   display: block;
+  justify-content: center;
+  margin-bottom: 12px;
 
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
 
-  margin-top: 40px;
-  margin-left: 41px;
-  margin-right: 39px;
-
   color: var(--title-text-color);
 }
-.modal-form {
-  display: block;
 
-  margin-top: 12px;
-  margin-left: 41px;
-  margin-right: 39px;
+/* Форма в модальном окне */
+
+.form-wrapper {
+  margin-bottom: 20px;
 }
+
+.form-wrapper .form-modal-input:not(:last-child) {
+  margin-bottom: 10px;
+}
+
 .form-modal-group {
   display: block;
   position: relative;
-  margin-bottom: 4px;
-}
-}
-.form-modal-input {
   width: 100%;
+}
+.form-modal-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+
+.form-modal-input {
+  width: 448px;
   padding: 11px 12px;
+  height: 40px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: transparent;
+  transition: var(--transition-duration) var(--transition-timing-function);
 }
+.form-modal-input:hover,
+.form-modal-input:focus {
+  border: 1px solid var(--accent-color);
+}
+.form-modal-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+}
+.form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: transparent;
+
+  transition: var(--transition-duration) var(--transition-timing-function);
+}
+.form-message:hover,
+.form-message:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.form-policy-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
 .btn {
   display: block;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  margin: 0 auto;
+
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
+
   cursor: pointer;
+  border-radius: 4px;
+  border-width: inherit;
 
   color: #ffffff;
 
@@ -791,11 +843,14 @@ textarea {
   border-radius: 4px;
 
   background-color: var(--accent-color);
+
+  transition: var(--transition-duration) var(--transition-timing-function);
 }
 .btn:hover,
 .btn:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
 /* Кнопки фильтра портфолио */
 
 .button-filter {
