--- a/css/styles.css
+++ b/css/styles.css
@@ -763,8 +763,8 @@ textarea {
   margin-bottom: 20px;
 }
 
-.form-wrapper .form-modal-input:not(:last-child) {
-  margin-bottom: 10px;
+.form-wrapper .form-modal-group + .form-modal-group {
+  margin-top: 10px;
 }
 
 .form-modal-group {
@@ -785,12 +785,12 @@ textarea {
 }
 
 .form-modal-input {
-  width: 448px;
-  padding: 11px 12px;
-  height: 40px;
+  width: 100%;
+  padding: 11px 12px 11px 42px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  cursor: pointer;
   outline: transparent;
   transition: var(--transition-duration) var(--transition-timing-function);
 }
@@ -798,23 +798,37 @@ textarea {
 .form-modal-input:focus {
   border: 1px solid var(--accent-color);
 }
+
 .form-modal-icon {
   position: absolute;
   bottom: 11px;
   left: 12px;
 }
+
+.form-modal-input:focus + .form-modal-icon {
+  fill: var(--accent-color);
+}
+.form-modal-input:hover + .form-modal-icon {
+  fill: var(--accent-color);
+}
+
 .form-message {
   width: 100%;
   height: 120px;
+  padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: transparent;
+  cursor: pointer;
 
   transition: var(--transition-duration) var(--transition-timing-function);
 }
 .form-message:hover,
 .form-message:focus {
   border: 1px solid var(--accent-color);
+}
+.form-message::placeholder {
+  opacity: 0.5;
 }
 
 .form-policy-group {
